kubernetes/applications/media/manifests/suwayomi-server/suwayomi-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: suwayomi-server-deployment
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: suwayomi-server
  template:
    metadata:
      labels:
        app: suwayomi-server
    spec:
      # temporary: prefer to keep off overloaded oug node
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: NotIn
                    values:
                      - talos-oug-a0q
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: suwayomi-server
          image: ghcr.io/suwayomi/suwayomi-server:v2.4.2376
          volumeMounts:
            - name: files
              mountPath: /home/suwayomi/.local/share/Tachidesk
          ports:
            - containerPort: 4567
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 32m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
      volumes:
        - name: files
          persistentVolumeClaim:
            claimName: suwayomi-server-files-pvc
