kubernetes/applications/media/manifests/suwayomi-server/suwayomi-server-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: suwayomi-server-httproute
  namespace: authentik
spec:
  parentRefs:
    - name: default-gateway
      namespace: kube-system
  hostnames:
    - suwayomi.nieradko.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ak-outpost-default
          port: 9000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: suwayomi-server-bridge-httproute
  namespace: media
spec:
  parentRefs:
    - name: default-gateway
      namespace: kube-system
  hostnames:
    - suwayomi-bridge.nieradko.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: suwayomi-server-service
          port: 4567
